--- a/02/02.ipynb
+++ b/02/02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,10 +65,7 @@
     "    ax1.set(\n",
     "        xlabel=\"время t\",\n",
     "        ylabel=\"u\",\n",
-    "        title=\"Численное решение задачи Коши при шаге \"\n",
-    "        + str(dt)\n",
-    "        + \" и количестве шагов в схеме Эйлера \"\n",
-    "        + str(step),\n",
+    "        title=f\"Численное решение задачи Коши при шаге {dt} и количестве шагов в схеме Эйлера {step}\",\n",
     "    )\n",
     "    ax1.grid()\n",
     "    ax1.legend()\n",
@@ -81,10 +78,7 @@
     "    ax1.set(\n",
     "        xlabel=\"время t\",\n",
     "        ylabel=\"u\",\n",
-    "        title=\"Модуль локальной ошибки решения при шаге \"\n",
-    "        + str(dt)\n",
-    "        + \" и количестве шагов в схеме Эйлера \"\n",
-    "        + str(step),\n",
+    "        title=f\"Модуль локальной ошибки решения при шаге {dt} и количестве шагов в схеме Эйлера {step}\",\n",
     "    )\n",
     "    ax1.grid()\n",
     "    plt.show()"
@@ -92,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
