--- a/04/04.ipynb
+++ b/04/04.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -277,14 +277,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\maxsh\\AppData\\Local\\Temp\\ipykernel_12724\\1190905401.py:9: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "C:\\Users\\maxsh\\AppData\\Local\\Temp\\ipykernel_2452\\4285543906.py:9: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  (1 + 2 * α * (np.sin(Pi * xx / 2)) ** 2)\n"
      ]
     },
@@ -316,7 +316,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\maxsh\\AppData\\Local\\Temp\\ipykernel_12724\\1190905401.py:7: RuntimeWarning: divide by zero encountered in log\n",
+      "C:\\Users\\maxsh\\AppData\\Local\\Temp\\ipykernel_2452\\4285543906.py:7: RuntimeWarning: divide by zero encountered in log\n",
       "  num1 = -np.log(np.fabs(1 - 4 * α * (np.sin(Pi * xx / 2)) ** 2))\n"
      ]
     },
@@ -363,7 +363,7 @@
     "    ax1.set(\n",
     "        xlabel=\"k/kN\",\n",
     "        ylabel=\"ГΔt\",\n",
-    "        title=\"Дисперсии уравнения при Δx = \" + str(Δx) + \" и Δt = \" + str(Δt),\n",
+    "        title=f\"Дисперсии уравнения при Δx = {Δx} и Δt = {Δt}\",\n",
     "    )\n",
     "    ax1.grid()\n",
     "    ax1.legend()\n",
@@ -374,7 +374,7 @@
     "    ax2.set(\n",
     "        xlabel=\"k/kN\",\n",
     "        ylabel=\"ГΔt\",\n",
-    "        title=\"Дисперсии уравнения при Δx = \" + str(Δx) + \" и Δt = \" + str(Δt),\n",
+    "        title=f\"Дисперсии уравнения при Δx = {Δx} и Δt = {Δt}\",\n",
     "    )\n",
     "    ax2.grid()\n",
     "    ax2.legend()\n",
